<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        style="@style/logoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <TextView
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan_txt" />

    <HorizontalScrollView style="@style/ScrollViewStyle">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                style="@style/ImageStyle"
                android:src="@drawable/ushop3" />

            <ImageView
                style="@style/ImageStyle"
                android:src="@drawable/ushop2" />


            <ImageView
                style="@style/ImageStyle"
                android:src="@drawable/ushop1" />

            <ImageView
                style="@style/ImageStyle"
                android:src="@drawable/ushop4" />


            <ImageView
                style="@style/ImageStyle"
                android:src="@drawable/maja1" />

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/location"
        style="@style/ContactView"
        android:drawableStart="@drawable/placeholder"
        android:onClick="openMap"
        android:text="@string/address" />

    <TextView
        android:id="@+id/homepage"
        style="@style/ContactView"
        android:autoLink="web"
        android:drawableStart="@drawable/web_page"
        android:text="@string/web_address" />

    <TextView
        android:id="@+id/phone"
        style="@style/ContactView"
        android:drawableStart="@drawable/phone"
        android:onClick="dialNumber"
        android:text="@string/phone" />

    <TextView
        android:id="@+id/mail"
        style="@style/ContactView"
        android:drawableStart="@drawable/envelope"
        android:onClick="openMail"
        android:text="@string/email" />

    <TextView
        android:id="@+id/fb_icon"
        style="@style/ContactView"
        android:drawableStart="@drawable/facebook"
        android:text="@string/fb_text" />

</LinearLayout>
